syntax = "proto3";

option java_package = "com.dtflys.test.converter.protobuf";
option java_outer_classname = "ProtobufTestSerializer";

enum Color {
  NONE = 0;
  RED = 1;
  GREEN = 2;
  BLUE = 3;
}

message BaseData {
  double double_val = 1;
  float float_val = 2;
  int32 int32_val = 3;
  int64 int64_val = 4;
  uint32 uint32_val = 5;
  uint64 uint64_val = 6;
  sint32 sint32_val = 7;
  sint64 sint64_val = 8;
  fixed32 fixed32_val = 9;
  fixed64 fixed64_val = 10;
  sfixed32 sfixed32_val = 11;
  sfixed64 sfixed64_val = 12;
  bool bool_val = 13;
  string string_val = 14;
  bytes bytes_val = 15;

  Color enum_val = 16;

  repeated string re_str_val = 17;
  map<string, BaseData> map_val = 18;
}